# taphome-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml  readme.md
.github/workflows/: ci.yml  release.yml
python/: TapHomeApiService.py
src/taphome_sdk/: __init__.py  device.py  device_analog_output.py  device_bidirectional.py  device_button.py  device_digital_output.py  device_factory.py  device_generic_output_adapter.py  device_light.py  device_multivalue_switch.py  device_thermostat.py  device_variable.py  exceptions.py  helpers.py  observable.py  operation_mode.py  switch_state.py  taphome_api.py  taphome_hub.py  value_type.py
tests/: conftest.py  test_device_factory.py  test_http_client.py  test_hub.py  test_models.py  test_observable.py
