[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taphome-sdk"
version = "1.0.0"
description = "Async Python client for the TapHome smart home API"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Martin Dybal" }]
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.9"]
keywords = ["taphome", "smarthome", "home-automation", "home-assistant"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
]

[project.urls]
Repository = "https://github.com/martindybal/taphome-sdk"
Issues = "https://github.com/martindybal/taphome-sdk/issues"
Changelog = "https://github.com/martindybal/taphome-sdk/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/taphome_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "D"]
ignore = ["D203", "D213", "E501", "UP046", "UP047"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.12"
packages = ["taphome_sdk"]
mypy_path = "src"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
